--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -61,7 +61,7 @@
 
                     <div class="form-group">
                         <div class="input-icon">
-                            <i class="fa-solid fa-envelope"></i>
+                            <i class="fa-solid fa-user"></i>
                             <input type="text" id="username" name="username" placeholder="Usuário" required>
                         </div>
                     </div>
